...
              size={size}
              strokeWidth={
                focused ? TAB_ICON_STROKE.active : TAB_ICON_STROKE.inactive
              }
            />
          ),
          tabBarButton: tabBarButtonWithTestID('tab-today'),
        }}
      />
      <Tabs.Screen
        name="schedule"
        options={{
          title: t('tabs.schedule'),
...
              size={size}
              strokeWidth={
                focused ? TAB_ICON_STROKE.active : TAB_ICON_STROKE.inactive
              }
            />
          ),
          tabBarButton: tabBarButtonWithTestID('tab-schedule'),
        }}
      />
      <Tabs.Screen
        name="hours"
        options={{
          title: t('tabs.hours'),
...
